--- a/Awv.Games.WoW/Awv.Games.WoW.csproj
+++ b/Awv.Games.WoW/Awv.Games.WoW.csproj
@@ -17,7 +17,7 @@
     <None Update="Assets\Tooltips\Fill-Azerite.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Assets\Tooltips\Fill-Corrupted.png">
+    <None Update="Assets\Tooltips\Fill-Corrupt.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Assets\Tooltips\Fill-Default.png">
