--- a/Awv.Games/Awv.Games.Core.csproj
+++ b/Awv.Games/Awv.Games.Core.csproj
@@ -3,6 +3,13 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>Awv.Games</RootNamespace>
+    <Authors>Joshua Kinzer</Authors>
+    <Company>Aerawave</Company>
+    <Description>Awv.Games is a set of libraries geared toward making content which is intended to simulate things found in various games.</Description>
+    <PackageProjectUrl>https://github.com/aerawave/Awv.Games</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/aerawave/Awv.Games</RepositoryUrl>
+    <PackageReleaseNotes>Awv.Games is a set of libraries geared toward making content which is intended to simulate things found in various games.</PackageReleaseNotes>
+    <PackageTags>aerawave</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
