Added ArtworkUpdater to Awv.Games.WoW.Data

--- a/Awv.Games.WoW.Data/Awv.Games.WoW.Data.csproj
+++ b/Awv.Games.WoW.Data/Awv.Games.WoW.Data.csproj
@@ -16,6 +16,7 @@ https://wow.tools/ literally made this entire Awv.Games.WoW project possible.</D
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="15.0.0" />
+    <PackageReference Include="libwarcraft" Version="3.0.0-alpha1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
