--- a/Awv.Games.WoW/Awv.Games.WoW.csproj
+++ b/Awv.Games.WoW/Awv.Games.WoW.csproj
@@ -13,12 +13,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Awv.Games.Core" Version="1.0.0" />
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0007" />
     <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="1.0.0-beta0007" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Awv.Games\Awv.Games.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
