Fixed an issue where items' "multi piece names" wouldn't render due to an incorrect cast.

--- a/Awv.Games.WoW/Awv.Games.WoW.csproj
+++ b/Awv.Games.WoW/Awv.Games.WoW.csproj
@@ -9,7 +9,8 @@
     <RepositoryType></RepositoryType>
     <PackageProjectUrl>https://github.com/aerawave/Awv.Games</PackageProjectUrl>
     <PackageTags>aerawave wow world of warcraft</PackageTags>
-    <PackageReleaseNotes>Awv.Games.WoW is used to simulate items and weapons from World of Warcraft.</PackageReleaseNotes>
+    <PackageReleaseNotes>Fixed an issue where items' "multi piece names" wouldn't render due to an incorrect cast.</PackageReleaseNotes>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
