--- a/ExampleProject/ExampleProject.csproj
+++ b/ExampleProject/ExampleProject.csproj
@@ -6,8 +6,39 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Awv.Games.WoW" Version="1.0.4" />
+    <PackageReference Include="Awv.Automation.Generation" Version="1.0.2" />
+    <PackageReference Include="Awv.Automation.Lexica" Version="1.0.4" />
+    <PackageReference Include="Awv.Automation.SocialMedia" Version="1.0.2" />
+    <PackageReference Include="Awv.Games.Core" Version="1.0.2" />
+    <PackageReference Include="Awv.Games.WoW" Version="1.0.7" />
     <PackageReference Include="Awv.Games.WoW.Data" Version="1.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="C:\Users\jaxki\.nuget\packages\awv.automation.lexica\1.0.1\contentFiles\any\netcoreapp3.1\V8_Net_Proxy_x64.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="C:\Users\jaxki\.nuget\packages\awv.automation.lexica\1.0.1\contentFiles\any\netcoreapp3.1\V8_Net_Proxy_x86.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="C:\Users\jaxki\.nuget\packages\awv.automation.lexica\1.0.2\contentFiles\any\netcoreapp3.1\V8_Net_Proxy_x64.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="C:\Users\jaxki\.nuget\packages\awv.automation.lexica\1.0.2\contentFiles\any\netcoreapp3.1\V8_Net_Proxy_x86.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="C:\Users\jaxki\.nuget\packages\awv.automation.lexica\1.0.4\contentFiles\any\netcoreapp3.1\V8_Net_Proxy_x64.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="C:\Users\jaxki\.nuget\packages\awv.automation.lexica\1.0.4\contentFiles\any\netcoreapp3.1\V8_Net_Proxy_x86.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="C:\Users\jaxki\.nuget\packages\awv.lexica\1.0.9\contentFiles\any\netcoreapp3.1\V8_Net_Proxy_x64.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="C:\Users\jaxki\.nuget\packages\awv.lexica\1.0.9\contentFiles\any\netcoreapp3.1\V8_Net_Proxy_x86.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
